--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 os: osx
 osx_image: xcode12.2
 language: swift
-script: xcodebuild clean build test -project EssentialFeed/EssentialFeed.xcodeproj -scheme "CI" -destination 'platform:iOS Simulator, id:0D454C73-93EB-49EB-B742-011FBD1D9611, OS:14.2, name:iPhone 8' CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+script: xcodebuild clean build test -project EssentialFeed/EssentialFeed.xcodeproj -scheme "CI" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
